refactor : 오브제 생성 api 리팩토링2 (이미지 제외)